--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "mailgun-js": "^0.22.0",
-    "mailgun.js": "^9.3.0"
+    "mailgun.js": "^9.3.0",
+    "mongoose": "^8.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
