Add routes for cart and rentals-list; still need to work on changin the navbar based on who logs in

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 MAILGUN_DOMAIN="YOUR_MAILGUN_DOMAIN"
 MAILGUN_API_KEY="YOUR_MAILGUN_API_KEY"
 MONGODB_CONNECTION_STRING="YOUR_MONGODB_STRING"
+EXPRESS_SESSION_SECRET_KEY="your_secret"
