--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "form-data": "^4.0.0",
     "mailgun-js": "^0.22.0",
     "mailgun.js": "^9.3.0",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
