--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jigar Patel",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1513.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "client-sessions": "^0.8.0",
@@ -21,7 +22,8 @@
     "mailgun-js": "^0.22.0",
     "mailgun.js": "^9.3.0",
     "mongoose": "^8.0.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
