Add note to professor in README.md explaining why I used AWS S3

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 MAILGUN_DOMAIN="YOUR_MAILGUN_DOMAIN"
 MAILGUN_API_KEY="YOUR_MAILGUN_API_KEY"
 MONGODB_CONNECTION_STRING="YOUR_MONGODB_STRING"
-EXPRESS_SESSION_SECRET_KEY="your_secret"
+CLIENT_SESSION_SECRET_KEY="your_secret"
+MY_AWS_REGION="your_region"
+MY_AWS_BUCKET_NAME="your_bucket_name"
+MY_AWS_ACCESS_KEY_ID="your_access_key_id"
+MY_AWS_SECRET_ACCESS_KEY="your_secret_access_key"
